fixed nav bar so white aligns with subnav

--- a/app/assets/stylesheets/site/header.css.sass
+++ b/app/assets/stylesheets/site/header.css.sass
@@ -181,6 +181,7 @@ header
 
         font-weight: bold
         font-size: 1em
+        margin-bottom: -3px
         +single-text-shadow(rgba(0,0,0,.4), 0px, 1px, 3px)
         letter-spacing: 1.2px
         text-transform: uppercase
